--- a/Enfoca/Features/Browse/Browse.storyboard
+++ b/Enfoca/Features/Browse/Browse.storyboard
@@ -49,7 +49,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.33989286422729492" green="0.37534031271934509" blue="0.4418322741985321" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="GML-ue-jy4" firstAttribute="centerY" secondItem="biK-m3-sRK" secondAttribute="centerY" id="1zL-LQ-AFy"/>
                                     <constraint firstAttribute="height" constant="64" id="Om8-Yr-XT3"/>
@@ -67,7 +67,7 @@
                                 <color key="backgroundColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.33989286419999998" green="0.37534031270000001" blue="0.44183227419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="0F6-9P-Mgk" firstAttribute="top" secondItem="drw-49-Ht7" secondAttribute="bottom" constant="-20" id="9Sf-Yd-IPa"/>
                             <constraint firstItem="oZ5-GF-viM" firstAttribute="leading" secondItem="92Y-hE-SfQ" secondAttribute="leading" id="MaN-7M-eEJ"/>
