--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="k4X-WW-dV3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="k4X-WW-dV3">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+        <array key="HelveticaNeueLights.ttc">
+            <string>HelveticaNeue-Light</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Quiz Options View Controller-->
         <scene sceneID="B9m-nE-LtS">
@@ -305,6 +313,7 @@
                     </view>
                     <connections>
                         <outlet property="backButton" destination="EqD-x1-8ua" id="XX2-GR-Hah"/>
+                        <outlet property="bodyView" destination="wP3-1r-zyq" id="EBs-Uq-3Vc"/>
                         <outlet property="browseButton" destination="QvO-LX-Fex" id="lG1-8E-1vL"/>
                         <outlet property="cardSideSegmentedControl" destination="pnF-29-0al" id="aoh-4d-HAX"/>
                         <outlet property="headerBackgroundView" destination="q1d-8s-92l" id="pcR-Rf-duH"/>
@@ -492,7 +501,7 @@
                                                 <real key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="1"/>
+                                                <real key="value" value="0.0"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
@@ -507,18 +516,18 @@
                                         <color key="highlightedColor" red="0.33989286422729492" green="0.37534031271934509" blue="0.4418322741985321" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mB1-qP-yvu">
-                                        <rect key="frame" x="343" y="20" width="27" height="28"/>
+                                        <rect key="frame" x="185.66666666666666" y="20" width="27" height="28"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
-                                        <color key="textColor" red="1" green="0.50619709196422069" blue="0.9676924661161308" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" red="1" green="0.50619709199999996" blue="0.96769246610000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="mB1-qP-yvu" firstAttribute="centerX" secondItem="5B7-De-YVm" secondAttribute="centerX" id="0Gw-LO-6u6"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="fcQ-zW-8J7" secondAttribute="trailing" constant="20" id="5eN-Fs-wet"/>
                                     <constraint firstItem="Kv9-Vm-6wE" firstAttribute="centerX" secondItem="5B7-De-YVm" secondAttribute="centerX" id="7k8-7R-sk1"/>
                                     <constraint firstAttribute="bottom" secondItem="Kv9-Vm-6wE" secondAttribute="bottom" constant="81" id="STk-sq-zad"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="mB1-qP-yvu" secondAttribute="trailing" constant="20" id="V3c-FD-cnc"/>
                                     <constraint firstItem="fcQ-zW-8J7" firstAttribute="centerX" secondItem="5B7-De-YVm" secondAttribute="centerX" id="Y5m-Dv-uk3"/>
                                     <constraint firstItem="mB1-qP-yvu" firstAttribute="top" secondItem="5B7-De-YVm" secondAttribute="top" constant="20" id="fT3-Qk-I7N"/>
                                     <constraint firstItem="fcQ-zW-8J7" firstAttribute="top" secondItem="5B7-De-YVm" secondAttribute="top" constant="109" id="uac-53-sGm"/>
